--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,6 +13,10 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      @media screen and (min-width: 1200px) {
+        flex-direction: row;
+        flex-shrink: 0;
+      }
   }
 }
 
@@ -138,6 +142,10 @@
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       width: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      
     }
   }
   
