--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -39,9 +39,9 @@
   .team-list-item {
     margin-bottom: 30px;
 
-    outline-left: 1px solid #ececec;
-    outline-bottom: 1px solid #ececec;
-    outline-right: 1px solid #ececec;
+    border-left: 1px solid #ececec;
+    border-bottom: 1px solid #ececec;
+    border-right: 1px solid #ececec;
     border-radius: 0px 0px 4px 4px;
   
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
