--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ a.current::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 2px;
   display: block;
   height: 4px;
   width: 100%;
@@ -100,14 +100,14 @@ a.current::after {
   background-color: var(--accent-color);
   transform: scaleX(1);
 }
+@media screen and (min-width: 1200px) {
+  a.current::after {
+    bottom: 0;
+  }
+}
 
 .section {
   padding: 94px 0;
-}
-
-.contacts-wrap {
-  display: flex;
-  margin-left: auto;
 }
 
 .header {
@@ -117,6 +117,7 @@ a.current::after {
   border-bottom: #ececec solid 1px;
 }
 .header .container {
+  position: relative;
   display: flex;
   align-items: center;
 }
@@ -125,14 +126,56 @@ a.current::after {
   color: var(--accent-color);
   font-family: "Raleway";
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
-  margin-right: 93px;
+  margin-right: 88px;
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin-right: 93px;
+    font-size: 26px;
+    line-height: 1.2;
+  }
 }
 
 .logo__text {
   color: #000000;
+}
+
+.menu-open-btn {
+  position: absolute;
+  top: -7px;
+  right: 15px;
+  margin-left: auto;
+  background: none;
+  outline: none;
+  border: none;
+  fill: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menu-open-btn:hover, .menu-open-btn:focus {
+  fill: var(--accent-color);
+}
+@media screen and (min-width: 768px) {
+  .menu-open-btn {
+    display: none;
+  }
+}
+
+.menu-icon {
+  fill: inherit;
+}
+
+.navigation {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .navigation {
+    display: unset;
+  }
 }
 
 .navigation-list {
@@ -173,19 +216,42 @@ a.current::after {
   transform: scaleX(1);
 }
 
+.contacts-wrap {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .contacts-wrap {
+    display: block;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts-wrap {
+    display: flex;
+    margin-left: auto;
+  }
+}
+
 .contacts {
   color: var(--main-text-color);
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
+  margin-left: 84px;
   letter-spacing: 0.02em;
   display: flex;
   align-items: center;
   fill: var(--main-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 1200px) {
+  .contacts {
+    font-size: 14px;
+    line-height: 1.14;
+    margin-left: 0;
+  }
+  .contacts:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 .contacts:hover, .contacts:focus {
   color: var(--accent-color);
@@ -197,34 +263,198 @@ a.current::after {
   fill: inherit;
 }
 
+.contacts-phone-icon {
+  width: 14px;
+  height: 10px;
+}
+@media screen and (min-width: 1200px) {
+  .contacts-phone-icon {
+    width: 16px;
+    height: 12px;
+  }
+}
+
+.contacts-mail-icon {
+  width: 10px;
+  height: 14px;
+}
+@media screen and (min-width: 1200px) {
+  .contacts-mail-icon {
+    width: 10px;
+    height: 16px;
+  }
+}
+
+.mob-menu {
+  position: fixed;
+  z-index: 10;
+  overflow-y: auto;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+.mob-menu .container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.menu-close-btn {
+  position: absolute;
+  top: -30px;
+  right: 15px;
+  background: #ffffff;
+  margin-left: auto;
+  background: none;
+  outline: none;
+  border: none;
+  fill: #000000;
+}
+.menu-close-btn:hover, .menu-close-btn:focus {
+  fill: var(--accent-color);
+}
+
+.menu-close-icon {
+  fill: inherit;
+}
+
+.mob-current {
+  color: var(--accent-color);
+}
+
+.mob-navigation-list__item {
+  margin-bottom: 32px;
+}
+
+.mob-navigation-list__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.02em;
+}
+@media screen and (max-width: 479px) {
+  .mob-navigation-list__link {
+    font-size: 8vmin;
+  }
+}
+
+.mob-contacts-list {
+  margin-bottom: 64px;
+}
+
+.mob-contacts-item:not(:last-child) {
+  color: var(--accent-color);
+  margin-bottom: 32px;
+}
+
+.mob-contacts {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: inherit;
+}
+@media screen and (max-width: 479px) {
+  .mob-contacts {
+    font-size: 7vmin;
+  }
+}
+
+.mob-soc-list {
+  display: flex;
+}
+
+.mob-soc-item:not(:last-child) {
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mob-soc-link {
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+@media screen and (max-width: 479px) {
+  .mob-soc-link {
+    font-size: 4vmin;
+  }
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
 .hero {
   background-color: var(--footer-bg-color);
-  padding-top: 200px;
-  padding-bottom: 200px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+  padding-top: 118px;
+  padding-bottom: 118px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
+}
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-mob-2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-tab.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-tab-2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+  }
 }
 
 .hero__title {
   color: #ffffff;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.6;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
 }
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
 
 .hero__btn {
   font-family: inherit;
-  background-color: var(--accent-color);
-  color: var(--secondary-btn-text-color);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+  background-color: var(--accent-color);
+  color: var(--secondary-btn-text-color);
   min-width: 200px;
   padding: 10px;
   border-radius: 4px;
@@ -411,9 +641,9 @@ a.current::after {
 
 .team-list-item {
   margin-bottom: 30px;
-  outline-left: 1px solid #ececec;
-  outline-bottom: 1px solid #ececec;
-  outline-right: 1px solid #ececec;
+  border-left: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
+  border-right: 1px solid #ececec;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -556,7 +786,7 @@ a.current::after {
 .customers-link {
   height: 92px;
   margin-bottom: 30px;
-  border: 1px solid #AFB1B8;
+  border: 1px solid #afb1b8;
   border-radius: 4px;
   display: flex;
   justify-content: center;
@@ -580,7 +810,12 @@ a.current::after {
 .footer .logo {
   margin: 0 auto;
   display: block;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .footer .logo {
+    margin-left: 0;
+  }
 }
 .footer .container {
   display: flex;
@@ -588,19 +823,17 @@ a.current::after {
   justify-content: center;
   align-items: center;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .footer .container {
+    align-items: baseline;
     flex-direction: row;
-    flex-shrink: 0;
+    flex-wrap: wrap;
   }
 }
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .footer-tablet-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-items: baseline;
+@media screen and (min-width: 1200px) {
+  .footer .container {
+    justify-content: flex-start;
+    flex-wrap: nowrap;
   }
 }
 
@@ -610,9 +843,16 @@ a.current::after {
   flex-direction: column;
   align-items: center;
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .footer-address-wrap {
-    margin-right: 165px;
+    width: 232px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-address-wrap {
+    margin-bottom: 0;
+    width: 232;
+    align-items: flex-start;
   }
 }
 
@@ -630,6 +870,11 @@ a.current::after {
 .address-item:not(:last-child) {
   margin-bottom: 9px;
 }
+@media screen and (min-width: 1200px) {
+  .address-item {
+    text-align: start;
+  }
+}
 
 .footer-address-link {
   color: #ffffff;
@@ -642,19 +887,32 @@ a.current::after {
   color: var(--accent-color);
 }
 
-.address-item .footer-contacts {
+.footer-contacts {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.address-item .footer-contacts:hover, .address-item .footer-contacts:focus {
+.footer-contacts:hover, .footer-contacts:focus {
   color: var(--accent-color);
 }
 
 .footer-join {
   padding-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .footer-join {
+    width: 50%;
+    padding-left: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-join {
+    padding-left: 70px;
+    padding-bottom: 0;
+    width: unset;
+  }
 }
 
 .footer-title {
@@ -665,6 +923,11 @@ a.current::after {
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-title {
+    text-align: start;
+  }
 }
 
 .footer-socials-list {
@@ -705,13 +968,13 @@ a.current::after {
     width: 450px;
   }
 }
-.footer-email-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
+@media screen and (min-width: 1200px) {
+  .footer-subscribe {
+    align-items: flex-start;
+    margin-left: 93px;
+    width: 570px;
+    box-sizing: border-box;
+  }
 }
 
 .footer-wrap {
@@ -719,6 +982,20 @@ a.current::after {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-wrap {
+    flex-direction: row;
+  }
+}
+
+.footer-email-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 .footer-email {
@@ -733,6 +1010,11 @@ a.current::after {
   background-color: transparent;
   outline: none;
   color: #ffffff;
+}
+@media screen and (min-width: 1200px) {
+  .footer-email {
+    width: 358px;
+  }
 }
 
 .footer-button {
@@ -751,6 +1033,11 @@ a.current::after {
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 1200px) {
+  .footer-button {
+    margin-left: 12px;
+  }
+}
 .footer-button:hover, .footer-button:focus {
   background-color: #188ce8;
 }
@@ -761,17 +1048,44 @@ a.current::after {
 }
 
 .examples {
-  padding: 94px 0;
+  padding: 60px 0;
+}
+@media screen and (min-width: 768px) {
+  .examples {
+    padding: 66px 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .examples {
+    padding: 94px 0;
+  }
 }
 
 .filter {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+}
+@media screen and (min-width: 768px) {
+  .filter {
+    justify-content: center;
+  }
 }
 
+.filter-item {
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 768px) {
+  .filter-item {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter-item {
+    margin-bottom: 50px;
+  }
+}
 .filter-item:not(:last-child) {
   margin-right: 8px;
-  margin-bottom: 50px;
 }
 
 .filter-btn {
@@ -796,21 +1110,41 @@ a.current::after {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.examples-list {
-  display: flex;
-  margin-right: -30px;
-  flex-wrap: wrap;
+@media screen and (min-width: 768px) {
+  .examples-list {
+    display: flex;
+    margin-right: -30px;
+    flex-wrap: wrap;
+  }
 }
 
-.examples-item {
-  flex-basis: calc((100% - 90px) / 3);
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .examples-item {
+    flex-basis: calc((100% - 60px) / 2);
+    margin-right: 30px;
+  }
 }
-.examples-item:nth-child(-n+6) {
+@media screen and (min-width: 1200px) {
+  .examples-item {
+    flex-basis: calc((100% - 90px) / 3);
+  }
+  .examples-item:nth-child(-n+6) {
+    margin-bottom: 30px;
+  }
+}
+.examples-item:not(:last-child) {
   margin-bottom: 30px;
 }
 .examples-item:hover, .examples-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+@media screen and (min-width: 768px) {
+  .examples-link {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 }
 
 .examples-wraper {
@@ -824,12 +1158,17 @@ a.current::after {
   width: 100%;
   height: 100%;
   font-size: 18px;
-  line-height: 28px;
+  line-height: 1.56;
   letter-spacing: 0.03em;
   color: #ffffff;
   background: rgba(33, 150, 243, 0.9);
   transform: translateY(0%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 479px) {
+  .examples-top-text {
+    font-size: 3.7vmin;
+  }
 }
 
 .examples-item:hover .examples-top-text {
@@ -851,6 +1190,7 @@ a.current::after {
   border-right: 1px solid #ececec;
   border-radius: 0px 0px 4px 4px;
   padding: 20px 24px;
+  flex-grow: 2;
 }
 
 .examples-title {
@@ -874,6 +1214,8 @@ a.current::after {
   left: 0;
   height: 100%;
   width: 100%;
+  border-right: 15px transparent solid;
+  border-left: 15px transparent solid;
   background: rgba(0, 0, 0, 0.5);
   visibility: visible;
   opacity: 1;
@@ -895,11 +1237,17 @@ a.current::after {
   top: 50%;
   left: 50%;
   padding: 40px;
-  width: 528px;
-  height: 581px;
+  width: 100%;
+  max-width: 450px;
+  max-height: 609px;
   background-color: #ffffff;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
 }
 
 .modal-close-btn {
@@ -927,9 +1275,8 @@ a.current::after {
 .modal-title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 1.5;
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--seconadry-text-color);
   margin-bottom: 12px;
   text-align: center;
@@ -960,7 +1307,7 @@ a.current::after {
   margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.16;
   letter-spacing: 0.01em;
   color: var(--main-text-color);
 }
@@ -977,8 +1324,8 @@ a.current::after {
 }
 .modal-comments::placeholder {
   font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
@@ -1000,14 +1347,24 @@ a.current::after {
 
 .policy-text {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   padding-top: 20px;
   padding-bottom: 30px;
-  padding-left: 12px;
+  padding-left: 0px;
+}
+
+.policy-link {
+  font-weight: 400;
+  padding-left: 4px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
 }
 
 .policy-text span {
@@ -1016,7 +1373,7 @@ a.current::after {
   height: 15px;
   border: 2px solid #000000;
   border-radius: 2px;
-  margin-right: 7px;
+  margin-right: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1034,14 +1391,6 @@ a.current::after {
 .check-icon {
   fill: transparent;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.policy-link {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
 }
 
 .modal-submit {
