--- a/sass/components/_current.scss
+++ b/sass/components/_current.scss
@@ -5,7 +5,7 @@ a.current {
       position: absolute;
     
       left: 0;
-      bottom: 0;
+      bottom: 2px;
     
       display: block;
     
@@ -14,6 +14,10 @@ a.current {
       border-radius: 2px;
       background-color: var(--accent-color);
       transform: scaleX(1);
+
+      @media screen and (min-width: 1200px) {
+        bottom: 0;
+      }
     }
   }
   
