--- a/css/main.css
+++ b/css/main.css
@@ -324,15 +324,15 @@ a.current::after {
   fill: inherit;
 }
 
-.mob-current {
-  color: var(--accent-color);
-}
-
 .mob-navigation-list__item {
   margin-bottom: 32px;
 }
+.mob-navigation-list__item .mob-current {
+  color: var(--accent-color);
+}
 
 .mob-navigation-list__link {
+  color: inherit;
   font-weight: 500;
   font-size: 40px;
   line-height: 1.17;
@@ -1064,24 +1064,23 @@ a.current::after {
 .filter {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 @media screen and (min-width: 768px) {
   .filter {
+    margin-bottom: 30px;
     justify-content: center;
   }
 }
-
-.filter-item {
-  margin-bottom: 15px;
-}
-@media screen and (min-width: 768px) {
-  .filter-item {
-    margin-bottom: 30px;
+@media screen and (min-width: 1200px) {
+  .filter {
+    margin-bottom: 50px;
   }
 }
-@media screen and (min-width: 1200px) {
-  .filter-item {
-    margin-bottom: 50px;
+
+@media screen and (max-width: 767px) {
+  .filter-item:nth-child(-n+3) {
+    margin-bottom: 15px;
   }
 }
 .filter-item:not(:last-child) {
@@ -1124,6 +1123,11 @@ a.current::after {
     margin-right: 30px;
   }
 }
+@media screen and (max-width: 1199px) {
+  .examples-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .examples-item {
     flex-basis: calc((100% - 90px) / 3);
@@ -1131,9 +1135,6 @@ a.current::after {
   .examples-item:nth-child(-n+6) {
     margin-bottom: 30px;
   }
-}
-.examples-item:not(:last-child) {
-  margin-bottom: 30px;
 }
 .examples-item:hover, .examples-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -1143,7 +1144,6 @@ a.current::after {
   .examples-link {
     display: flex;
     flex-direction: column;
-    height: 100%;
   }
 }
 
