--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -11,21 +11,23 @@
 .filter {
   display: flex;
   flex-wrap: wrap;
-  @media screen and (min-width: 768px) {
-    justify-content: center;
-  }
-}
-
-.filter-item {
-  margin-bottom: 15px;
-
+  margin-bottom: 40px;
   @media screen and (min-width: 768px) {
     margin-bottom: 30px;
+    justify-content: center;
   }
   @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
   }
+}
 
+.filter-item {
+  @media screen and (max-width: 767px) {
+    &:nth-child(-n + 3) {
+      margin-bottom: 15px;
+    }
+  }
+  
   &:not(:last-child) {
     margin-right: 8px;
   }
@@ -74,15 +76,17 @@
     margin-right: 30px;
   }
 
+  @media screen and (max-width: 1199px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 90px) / 3);
     &:nth-child(-n + 6) {
       margin-bottom: 30px;
     }
-  }
-
-  &:not(:last-child) {
-    margin-bottom: 30px;
   }
 
   &:hover,
@@ -96,7 +100,10 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    // height: 100%;
+    // &:last-child {
+    //   height: calc(100% - 30px);
+    // }
   }
 }
 
