--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,6 +8,8 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/hero-bg-mob.jpg);
+    max-width: 480px;
+    margin: 0 auto;
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -39,11 +41,13 @@
         ),
         url(../images/hero-bg-tab-2x.jpg);
     }
+    max-width: 768px;
   }
 
   @media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
+    max-width: 1600px;
 
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
