--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -245,3 +245,7 @@
   fill: #ffffff;
   margin-left: 10px;
 }
+
+.test {
+  filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
+}
